# ChangeLog for dev-libs/appstream-glib
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/appstream-glib/ChangeLog,v 1.8 2014/11/24 11:13:49 mgorny Exp $

  24 Nov 2014; Michał Górny <mgorny@gentoo.org> appstream-glib-0.3.2.ebuild:
  [QA] Add missing blocker on colliding versions of dev-util/appdata-tools. Use
  PDEPEND instead of RDEPEND on the metapackage to solve collisions. Fix
  overwritten RDEPEND.

  23 Nov 2014; Gilles Dartiguelongue <eva@gentoo.org>
  appstream-glib-0.3.2.ebuild:
  Do not block apptools-data for now but require dummy package instead.

*appstream-glib-0.3.2 (23 Nov 2014)

  23 Nov 2014; Gilles Dartiguelongue <eva@gentoo.org>
  +appstream-glib-0.3.2.ebuild:
  Version bump. Completely superseeds appdata-tools.

  23 Oct 2014; Markus Meier <maekke@gentoo.org> appstream-glib-0.3.0.ebuild:
  add ~arm, bug #523924

  16 Oct 2014; Anthony G. Basile <blueness@gentoo.org>
  appstream-glib-0.3.0.ebuild:
  Keyword ~ppc ~ppc64, bug #523924

  05 Oct 2014; Gilles Dartiguelongue <eva@gentoo.org>
  appstream-glib-0.3.0.ebuild:
  Add gtk-doc to DEPEND, bug #523922.

  28 Sep 2014; Jeroen Roovers <jer@gentoo.org> appstream-glib-0.3.0.ebuild:
  Marked ~hppa too.

*appstream-glib-0.3.0 (27 Sep 2014)

  27 Sep 2014; Gilles Dartiguelongue <eva@gentoo.org>
  +appstream-glib-0.3.0.ebuild, +metadata.xml:
  Initial commit, required by newer appdata-tools.