@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/appstream-glib
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/appstream-glib/ChangeLog,v 1.8 2014/11/24 11:13:49 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/appstream-glib/ChangeLog,v 1.9 2014/12/05 12:25:36 pacho Exp $
+
+*appstream-glib-0.3.3 (05 Dec 2014)
+
+  05 Dec 2014; Pacho Ramos <pacho@gentoo.org> +appstream-glib-0.3.3.ebuild:
+  Version bump
 
   24 Nov 2014; Michał Górny <mgorny@gentoo.org> appstream-glib-0.3.2.ebuild:
   [QA] Add missing blocker on colliding versions of dev-util/appdata-tools. Use
